write first gui prototype